--- a/_posts/2022-09-08-1st.md
+++ b/_posts/2022-09-08-1st.md
@@ -1,5 +1,5 @@
 ---
-title:  "property 선언에서 => 와 { get; } = 차이점"
+title:  "c# roperty 선언에서 => 와 { get; } = 차이점"
 # categories:
 #   - Blog
 tags: [c#, property]
