데코레이터

--- a/_posts/2022-09-09-1st.md
+++ b/_posts/2022-09-09-1st.md
@@ -1,5 +1,5 @@
 ---
-title:  "selenium을 사용한 웹제어 기본"
+title:  "python에서 selenium을 사용한 웹제어 기본"
 # categories:
 #   - Blog
 tags: [python, web scraping]
