9월12일 포스트

--- a/_posts/2022-09-11-1st.md
+++ b/_posts/2022-09-11-1st.md
@@ -20,15 +20,22 @@ app = Flask(__name__)
 @app.route('/')
 def hello_world():
     return 'Hello, World!'
+
+@app.route('/bye')
+def bye():
+    return 'bye'
 ```
 
 ## 환경변수 설정
 ```
+# linux
+$ export FLASK_APP=hello.py
+
 # Command Prompt
 C:\path\to\app>set FLASK_APP=hello.py
 
 # PowerShell
-PS C:\path\to\app> $env:FLASK_APP = "hello.py"
+PS C:\path\to\app>$env:FLASK_APP = "hello.py"
 ```
 
 ## 실행
