--- a/_posts/2022-09-12-2nd.md
+++ b/_posts/2022-09-12-2nd.md
@@ -10,7 +10,7 @@ tags: [python, flask]
 ## debug 모드 설정
 ```
 # linux
-$ export $env:FLASK_DEBUG=1
+$ export FLASK_DEBUG=1
 
 # Windows command
 C:\path\to\app>set FLASK_DEBUG=1
