--- a/_posts/2022-09-10-2nd.md
+++ b/_posts/2022-09-10-2nd.md
@@ -83,7 +83,7 @@ decorated_hello()
 ```
 
 
-## Decorators to add a tag around text on web pag
+## Decorators to add a tag around text on web page
 ```python
 def make_bold(function):
     def wrapper():
