--- a/_posts/2022-09-13-1st.md
+++ b/_posts/2022-09-13-1st.md
@@ -1,5 +1,5 @@
 ---
-title:  "flask 폴더 구조 및 templating"
+title:  "flask 폴더 구조 및 templating with Jinja"
 tags: [python, flask]
 
 # toc: true
@@ -37,3 +37,29 @@ def home():
 def htmlRoute():
     return render_template('index.html')
 ```
+
+## templating with variables
+```python
+from flask import render_template
+
+@app.route('/hello/')
+@app.route('/hello/<name>')
+def hello(name=None):
+    return render_template('hello.html', name=name)
+```
+
+```html
+<!doctype html>
+<title>Hello from Flask</title>
+{% if name %}
+  <h1>Hello {{ name }}!</h1>
+{% else %}
+  <h1>Hello, World!</h1>
+{% endif %}
+```
+
+템플릿 내에서 변수를 사용하려면 render_template() 괄호 안에 렌더링 할 HTML 파일 이름에 이어 변수명을 키워드 인수를 추가한다. 둘 이상의 변수를 추가하려면 쉼표로 구분한다.
+
+템플릿에서 이 변수를 사용할 때는 {{ 변수명 }}을 사용한다.
+
+조건문은 {% if문 %} 괄호 안에 조건문을 써주고, {% endif %}로 마무리한다.
