--- a/_posts/2022-09-14-1st.md
+++ b/_posts/2022-09-14-1st.md
@@ -9,6 +9,7 @@ tags: [c#]
 # toc_label: "페이지 목차"
 ---
 ## 코드
+
 ```c#
 byte[] Ip = new byte[4] { 192, 168, 1, 0 };
 
@@ -34,7 +35,8 @@ Console.WriteLine($"Ret3: {Ret3}, IsLittleEndian: {BitConverter.IsLittleEndian}"
 ```
 
 ## 결과
-```
+
+```text
 Ret1: 3232235776
 Ret2: 108736
 Ret3: 3232235776, IsLittleEndian: True
