--- a/_posts/2022-09-13-1st.md
+++ b/_posts/2022-09-13-1st.md
@@ -24,6 +24,7 @@ Flask 서버를 만들 때, 프로젝트 폴더 안에 static 폴더(css, images
 
 
 ## templating
+
 ```python
 from flask import Flask, render_template
 
@@ -39,6 +40,7 @@ def htmlRoute():
 ```
 
 ## templating with variables
+
 ```python
 from flask import render_template
 
@@ -51,15 +53,15 @@ def hello(name=None):
 ```html
 <!doctype html>
 <title>Hello from Flask</title>
-{% if name %}
-  <h1>Hello {{ name }}!</h1>
-{% else %}
+{% raw %}{% if name %}{% endraw %}
+  <h1>Hello {% raw %}{{ name }}{% endraw %}!</h1>
+{% raw %}{% else %}{% endraw %}
   <h1>Hello, World!</h1>
-{% endif %}
+{% raw %}{% endif %}{% endraw %}
 ```
 
 템플릿 내에서 변수를 사용하려면 render_template() 괄호 안에 렌더링 할 HTML 파일 이름에 이어 변수명을 키워드 인수를 추가한다. 둘 이상의 변수를 추가하려면 쉼표로 구분한다.
 
-템플릿에서 이 변수를 사용할 때는 {{ 변수명 }}을 사용한다.
+템플릿에서 이 변수를 사용할 때는 {{ varible_name }}을 사용한다.
 
-조건문은 {% if문 %} 괄호 안에 조건문을 써주고, {% endif %}로 마무리한다.
+조건문은 {% raw %}{% if문 %}{% endraw %} 괄호 안에 조건문을 써주고, {% raw %}{% endif %}{% endraw %}로 마무리한다.
