--- a/_posts/2022-09-12-2nd.md
+++ b/_posts/2022-09-12-2nd.md
@@ -8,7 +8,8 @@ tags: [python, flask]
 ---
 
 ## debug 모드 설정
-```
+
+```text
 # linux
 $ export FLASK_DEBUG=1
 
@@ -22,6 +23,7 @@ $ flask run
 ```
 
 ## debug 모드 기능
+
 1. it activates the debugger
 
 2. it activates the automatic reloader
