--- a/_posts/2022-09-12-3rd.md
+++ b/_posts/2022-09-12-3rd.md
@@ -23,7 +23,6 @@ adder(4,5,6,7)
 adder(1,2,3,5,6)
 ```
 
-
 ## variable keyword arguments
 
 ```python
@@ -41,7 +40,7 @@ intro(Firstname="Sita",
 
 ### 결과
 
-```
+```text
 Data type of argument: <class 'dict'>
 Firstname is Sita
 Lastname is Sharma
