--- a/_posts/2022-09-16-2nd.md
+++ b/_posts/2022-09-16-2nd.md
@@ -1,73 +1,129 @@
 ---
-title:  "python range() function"
+title:  "python tuple 개념 및 특징"
 # categories:
 #   - Blog
-tags: [python]
+tags: [python, tuple]
 
 # toc: true
 # toc_sticky: true
 # toc_label: "페이지 목차"
 ---
 
-## range(n) - 1 Parameter Form
+## 리스트(List)와 비슷한 컬렉션
 
 ```python
->>> s = 'Python'
->>> len(s)
-6
->>> for i in range(len(s)):
-...   print(i, s[i])
-... 
-0 P
-1 y
-2 t
-3 h
-4 o
-5 n
+
+# 소괄호를 사용
+# 리스트와 같이 순서가 있어서 인덱스로 접근이 가능
+>>> x = ('Glenn', 'Sally', 'Joseph')
+>>> print(x[2])
+Joseph
+
+>>> y = ( 1, 9, 2 )
+>>> print(y)
+(1, 9, 2)
+
+# 최대값도 찾을 수 있다
+>>> print(max(y))
+9
+
+# for 반복문에서 리스트처럼 원소를 순서대로 출력
+>>> for iter in y :
+...     print(iter)
+...
+1
+9
+2
 ```
 
+
+## 변경 불가능한 속성 (immutable)
+
 ```python
->>> list(range(5))
-[0, 1, 2, 3, 4]
+>>> x = (9, 8, 7)
+>>> x[2] = 6
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+TypeError: 'tuple' object does not support item assignment
+>>> print(x)
+(9, 8, 7)
+>>>
 ```
 
-## reversed() Variation
++ 이런 변경 불가능한 속성 때문에 튜플은 리스트보다 훨씬 더 효율적으로 동작한다
+  + 용량도 적게 차지
+  + 접근도 훨씬 빠름
 
++ 한 번 생성된 튜플은 정렬하거나, 값을 추가하거나, 순서를 바꿀 수 없다
 ```python
->>> s = 'Python'
->>> len(s)
-6
->>> for i in reversed(range(len(s))):
-...   print(i, s[i])
-... 
-5 n
-4 o
-3 h
-2 t
-1 y
-0 P
+>>> x = (3, 2, 1)
+
+>>> x.sort()
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'tuple' object has no attribute 'sort'
+
+>>> x.append(5)
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'tuple' object has no attribute 'append'
+
+>>> x.reverse()
+Traceback (most recent call last):
+  File "<stdin>", line 1, in <module>
+AttributeError: 'tuple' object has no attribute 'reverse'
 ```
 
-## range(start, stop) - 2 Parameter Form
+## 튜플의 장점
+
+### 임시 변수로 활용
 
 ```python
->>> list(range(5, 10))
-[5, 6, 7, 8, 9]
+
+# 간단하게 여러 변수에 값 대입
+>>> (x, y) = (4, 'fred')
+>>> print(y)
+fred
+
+>>> (a, b) = (99, 98)
+>>> print(a)
+99
+
+# 함수에서 여러 개의 값을 한꺼번에 반환
+>>> def t() :
+...     return (10, 20)
+...
+>>> x, y = t()
+>>> print(x, y)
+10 20
 ```
 
-## range(start, stop, step) - 3 Parameter Form
+### 딕셔너리를 처리하는데 활용
 
 ```python
->>> list(range(0, 10, 2))
-[0, 2, 4, 6, 8]
->>> list(range(0, 10, 6))
-[0, 6]
->>> list(range(200, 800, 100))
-[200, 300, 400, 500, 600, 700]
+>>> d = dict()
+>>> d['csev'] = 2
+>>> d['cwen'] = 4
+>>> for (k,v) in d.items():
+...     print(k, v)
+...
+csev 2
+cwen 4
+
+>>> tups = d.items()
+>>> print(tups)
+dict_items([('csev', 2), ('cwen', 4)])
 ```
+
+### 여러 값에 대해 비교 가능
+
 ```python
->>> list(range(10, 5, -1))
-[10, 9, 8, 7, 6]
->>> list(range(10, 5, -2))
-[10, 8, 6]
+>>> (0, 1, 2) < (5, 1, 2)
+True
+>>> (0, 1, 2000000) < (0, 3, 4)
+True
+>>> ( 'Jones', 'Sally' ) < ('Jones', 'Sam')
+True
+>>> ( 'Jones', 'Sally') > ('Adams', 'Sam')
+True
 ```
