--- a/_posts/2022-09-16-2nd.md
+++ b/_posts/2022-09-16-2nd.md
@@ -125,3 +125,15 @@ True
 >>> ( 'Jones', 'Sally') > ('Adams', 'Sam')
 True
 ```
+
+## 튜플 리스트 변환
+
+![](/assets/post_img/tuple_convert_list.jpg)
+
+## 튜플에 대한 작업
+
+![](/assets/post_img/tuple_operation.jpg)
+
+## 튜플 메서드
+
+![](/assets/post_img/tuple_method.jpg)
