--- a/_posts/2022-09-12-3rd.md
+++ b/_posts/2022-09-12-3rd.md
@@ -11,6 +11,8 @@ tags: [python]
 
 ```python
 def adder(*num):
+    print("Data type of argument:",type(num))
+
     sum = 0
     
     for n in num:
@@ -21,6 +23,17 @@ def adder(*num):
 adder(3,5)
 adder(4,5,6,7)
 adder(1,2,3,5,6)
+```
+
+### 결과
+
+```text
+Data type of argument: <class 'tuple'>
+Sum: 8
+Data type of argument: <class 'tuple'>
+Sum: 22
+Data type of argument: <class 'tuple'>
+Sum: 17
 ```
 
 ## variable keyword arguments
