--- a/_posts/2022-09-04-1st.md
+++ b/_posts/2022-09-04-1st.md
@@ -24,6 +24,10 @@ tags: [python, file]
 |ab|추가 모드(바이너리)<br>파일이 존재하면 파일포인터는 파일의 끝<br>파일이 존재하지 않으면 쓰기 모드로 생성|
 |a+|읽기/쓰기<br>파일이 존재하면 파일포인터는 파일의 끝<br>파일이 존재하지 않으면 읽기/쓰기 모드로 생성|
 |ab+|읽기/쓰기(바이너리)<br>파일이 존재하면 파일포인터는 파일의 끝<br>파일이 존재하지 않으면 읽기/쓰기 모드로 생성|
+|x|쓰기 전용<br>파일이 존재하면 FileExistsError 예외 발생|
+|xb|쓰기 전용(바이너리)<br>파일이 존재하면  FileExistsError 예외 발생|
+|x+|읽기/쓰기<br>파일이 존재하면  FileExistsError 예외 발생|
+|xb+|읽기/쓰기(바이너리)<br>파일이 존재하면  FileExistsError 예외 발생|
 
 ![](/assets/post_img/python_fileopen_mode.png)
 
@@ -33,8 +37,11 @@ tags: [python, file]
 <br>
 
 + 기존 파일 내용: Hello World!
-+ aa 쓰는 경우
++ "aa" 쓰는 경우
   + w+ :  aa
   + r+ :  aallo World!
   + a+ :  Hello World!aa
-
++ x 모드를 쓰는 이유
+  + w 모드: 기존 파일 내용을 지우는 실수
+  + a 모드: 기존 파일 내용에 추가하는 실수
+  + ⟶ 반드시 새로운 파일에 쓰겠다는 의지
