--- a/_posts/2022-09-20-1st.md
+++ b/_posts/2022-09-20-1st.md
@@ -2,7 +2,7 @@
 title:  "python 데이타 타입"
 # categories:
 #   - Blog
-tags: [python]
+tags: [python, type]
 
 # toc: true
 # toc_sticky: true
@@ -33,85 +33,121 @@ tags: [python]
   + set
   + frozenset
 
-## int
+## 타입 확인 방법 -- 두 가지
+
+```python
+>>> variable = "hello"
+>>> type(variable) is str
+True
+>>> isinstance(variable, str)
+True
+```
+
+## isinstance()을 선호하는 이유
+
++ isinstance()이 더 빠르다
++ 상속을 포함하여 타입 체킹을 한다
+
+## 상속을 고려한 type 체킹 예제
+
+### 클래스 정의
+
+```python
+class MyAwesomeList(list):
+    # Add additional functions here
+```
+
+### 결과
+
+```python
+>>> my_list = MyAwesomeList()
+>>> type(my_list) is list
+False
+>>> isinstance(my_list, list)
+True
+```
+
+## 코드
+
+### int
 
 ```python
 x = 20
 ```
 
-## float
+### float
 
 ```python
 x = 20.5
 ```
 
-## complex
+### complex
 
 ```python
 x = 1j
 ```
 
-## list
+### list
 
 ```python
 x = ["apple", "banana", "cherry"]
 ```
 
-## tuple
+### tuple
 
 ```python
 x = ("apple", "banana", "cherry")
 ```
 
-## range
+### range
 
 ```python
 x = range(6)
 ```
 
-## dict
+### dict
 
 ```python
 x = {"name" : "John", "age" : 36}
 ```
 
-## set
+### set
 
 ```python
 x = {"apple", "banana", "cherry"}
 ```
 
-## frozenset
+### frozenset
 
 ```python
 x = frozenset({"apple", "banana", "cherry"})
 ```
 
-## bool
+### bool
 
 ```python
 x = True
 ```
 
-## bytes
+### bytes
 
 ```python
 x = b"Hello"
 ```
 
-## bytearray
+### bytearray
 
 ```python
 x = bytearray(5)
 ```
 
-## memoryview
+### memoryview
 
 ```python
 x = memoryview(bytes(5))
 ```
 
-## NoneType
+### NoneType
 
 ```python
 x = None
