--- a/_posts/2022-09-21-1st.md
+++ b/_posts/2022-09-21-1st.md
@@ -1,42 +1,110 @@
 ---
-title:  "python 가상환경(venv) 구성--windows"
+title:  "python 모듈"
 # categories:
 #   - Blog
 tags: [python, module]
 
-# toc: true
-# toc_sticky: true
-# toc_label: "페이지 목차"
+toc: true
+toc_sticky: true
+toc_label: "페이지 목차"
 ---
 
-## 가상환경 만들기
+## 모듈 정의
 
-+ python -m venv 가상환경이름
++ 모듈이란 함수, 변수 그리고 클래스를 모아 놓은 파일이다
++ 파일의 이름은 모듈 이름에 확장자 .py를 붙인다
++ 하나의 파이썬 파일(.py 파일)을 의미한다
 
-```text
-C:\project>python -m venv .venv
+## 모듈 위치
 
-# vscode 우측 하단에서 생성한 가상환경 인터프리터를 선택한다
-# 기존 터미널이 열려있으면 kill한 다음 다시 실행한다
+모듈을 import 하면 그 모듈을 찾기 위해 다음과 같은 경로를 순서대로 검색한다
 
-# 아래는 vscode를 사용한다면 vscode가 자동으로 실행한다
-C:\project>cd .venv
-C:\project\.venv>Scripts\activate.bat
-(.venv) C:\project\.venv>
++ 현재 디렉토리
++ 환경변수 PYTHONPATH에 지정된 경로
++ Python이 설치된 경로 및 그 밑의 라이브러리 경로
+
+이러한 경로들은 모두 취합되어 시스템 경로인 sys.path에 리스트 형태로 저장한다. 모듈이 검색되는 검색 경로는 sys.path를 체크하면 알 수 있다. 모듈을 import 하면 sys.path에 있는 경로 순서대로 모듈을 찾는다. 끝까지 찾지 못하면 에러를 발생한다.
+
+## import 모듈
+
+```python
+import math
+
+# 최대 공약수
+r1 = math.gcd(15, 27)
+
+# 최소 공배수
+r2 = math.lcm(15, 27)
+
+# 제곱, 제곱근
+r3 = math.pow(2, 10)
+r4 = math.sqrt(100)
 ```
 
-+ 프롬프트 앞을 보면 (.venv)과 같이 가상 환경의 이름이 표시된다
+## import 모듈 as 별명
 
-+ 이 상태에서 pip로 패키지를 설치하면 C:\project\\.venv\Lib\site-packages 안에 패키지가 저장된다
+```python
+import math as m
 
-## 가상 환경별로 파이썬 버전 구분하기
+# 최대 공약수
+r1 = m.gcd(15, 27)
 
-+ 만약 가상 환경별로 파이썬 인터프리터 버전을 다르게 만들고 싶다면 해당 버전의 파이썬 인터프리터로 venv 모듈을 실행한다
-+ 다음은 파이썬 3.4를 사용하는 가상 환경을 만든다
+# 최소 공배수
+r2 = m.lcm(15, 27)
 
-```text
-C:\project>C:\Python34\python.exe -m venv .venv
+# 제곱, 제곱근
+r3 = m.pow(2, 10)
+r4 = m.sqrt(100)
 ```
 
-+ 이렇게 하면 venv 모듈을 실행한 파이썬 실행 파일(인터프리터)이 가상 환경 안에 들어간다
+## from 모듈 import *
 
+```python
+from math import *
+
+# 최대 공약수
+r1 = gcd(15, 27)
+
+# 최소 공배수
+r2 = lcm(15, 27)
+
+# 제곱, 제곱근
+r3 = pow(2, 10)
+r4 = sqrt(100)
+```
+
++ 모듈 이름 없이 함수를 사용하고 싶을 때 사용한다. 많은 모듈을 사용하는 경우 어디 출신 함수인지 헷갈릴 수 있습니다.
+
+## from 모듈 import 함수이름, 클래스이름
+
+```python
+from math import gcd, lcm, pow
+
+# 최대 공약수
+r1 = gcd(15, 27)
+
+# 최소 공배수
+r2 = lcm(15, 27)
+
+# 제곱, 제곱근
+r3 = pow(2, 10)
+# r4 = sqrt(100) : 사용불가 math.sqrt(x), sqrt(x)
+```
+
++ 모듈에서 특정 함수나 클래스만 사용하고 싶을 때 사용하는 방법이다. import 하지 않은 함수, 클래스는 사용이 불가능하다.
+
+## from 모듈 import 함수이름 as 별명
+
+```python
+from math import gcd as g, lcm as l, pow as p, sqrt as s
+
+# 최대 공약수
+r1 = g(15, 27)
+
+# 최소 공배수
+r2 = l(15, 27)
+
+# 제곱, 제곱근
+r3 = p(2, 10)
+r4 = s(100)
+```
