--- a/_posts/2022-09-22-1st.md
+++ b/_posts/2022-09-22-1st.md
@@ -2,7 +2,7 @@
 title:  "python 가상환경(venv) 구성--windows"
 # categories:
 #   - Blog
-tags: [python, module]
+tags: [python, venv]
 
 # toc: true
 # toc_sticky: true
@@ -40,3 +40,20 @@ C:\project>C:\Python34\python.exe -m venv .venv
 
 + 이렇게 하면 venv 모듈을 실행한 파이썬 실행 파일(인터프리터)이 가상 환경 안에 들어간다
 
+## 패키지 목록 관리하기
+
+### 목록저장
+
+```text
+(.venv) C:\project\pip freeze > requirements.txt
+```
+
+### 설치
+
+```text
+(.venv) C:\project\pip install -r requirements.txt
+```
+
+## 가상환경 삭제
+
+내가 사용했던 가상환경, 그 안에 설치된 패키지들을 한 방에 삭제하고 싶다면 그냥 과감히 venv로 생성한 가상환경 이름의 폴더를 휴지통으로 보내면 끝이다. (가상환경을 삭제하는 별도의 명령어는 없다.)
