--- a/_posts/2022-09-14-1st.md
+++ b/_posts/2022-09-14-1st.md
@@ -14,7 +14,7 @@ tags: [c#]
 byte[] Ip = new byte[4] { 192, 168, 1, 0 };
 
 
-/* big endian */
+/* big endian 또는 네트워크 바이트 순서*/
 uint Ret1 =
     (((uint)Ip[0]) << 24) |
     (((uint)Ip[1]) << 16) |
