--- a/_posts/2022-11-27-2nd..md
+++ b/_posts/2022-11-27-2nd..md
@@ -1,8 +1,8 @@
 ---
-title: "pySide signal/slot"
+title: "pySide first Dialog"
 # categories:
 #   - Blog
-tags: [c#]
+tags: [pySide]
 
 # toc: true
 # toc_sticky: true
