--- a/2024/_post/2024-04-10-1st..md
+++ b/2024/_post/2024-04-10-1st..md
@@ -1,5 +1,5 @@
 ---
-title: "pySide table widget"
+title: "and_then()"
 # categories:
 #   - Blog
 tags: [rust]
@@ -9,48 +9,29 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
+## .and_then
 
-```python
-import sys
-from PySide6.QtGui import QColor
-from PySide6.QtWidgets import (QApplication, QTableWidget,
-                               QTableWidgetItem)
+.and_then() is a helpful method that takes an Option, then lets you do something to its value and pass it on. So its input is an Option, and its output is also an Option. It is sort of like a safe "unwrap, then do something, then wrap again".
 
-colors = [("Red", "#FF0000"),
-          ("Green", "#00FF00"),
-          ("Blue", "#0000FF"),
-          ("Black", "#000000"),
-          ("White", "#FFFFFF"),
-          ("Electric Green", "#41CD52"),
-          ("Dark Blue", "#222840"),
-          ("Yellow", "#F9E56d")]
+```rust
+fn main() {
+    let new_vec = vec![8, 9, 0];
+    let number_to_add = 5;
+    let mut empty_vec = vec![];
 
-def get_rgb_from_hex(code: str) ->QColor:
-    code_hex = code.replace("#", "")
-    
-    # tuple comprehension
-    # 2 byte hexa string을 int로 변환
-    rgb = tuple(int(code_hex[i:i+2], 16) for i in (0, 2, 4))
-    
-    return QColor.fromRgb(rgb[0], rgb[1], rgb[2])
+    for index in 0..5 {
+        empty_vec.push(
+            new_vec
+               .get(index)
+               .and_then(|number| Some(number + 1))
+               .and_then(|number| Some(number + number_to_add))
+        );
+    }
+    println!("{:?}", empty_vec);
+}
+```
 
-app = QApplication()
-
-table = QTableWidget()
-table.setRowCount(len(colors))
-table.setColumnCount(len(colors[0]) + 1)
-table.setHorizontalHeaderLabels(["Name", "Hex Code", "Color"])
-
-# enumerate()을 써서 인덱스 i를 활용한다
-for i, (name, code) in enumerate(colors):
-    item_name = QTableWidgetItem(name)
-    item_code = QTableWidgetItem(code)
-    item_color = QTableWidgetItem()
-    item_color.setBackground(get_rgb_from_hex(code))
-    table.setItem(i, 0, item_name)
-    table.setItem(i, 1, item_code)
-    table.setItem(i, 2, item_color)
-    
-table.show()
-sys.exit(app.exec())
+결과
+```text
+[Some(14), Some(15), Some(6), None, None]
 ```
