--- a/2024/_posts/2024-04-10-1st..md
+++ b/2024/_posts/2024-04-10-1st..md
@@ -1,8 +1,8 @@
 ---
 title: "and_then()"
-# categories: "2014"
+categories: "RUST"
 #   - Blog
-tags: [rust]
+tags: [RUST]
 
 # toc: true
 # toc_sticky: true
