--- a/2024/_posts/2024-04-11-2nd.md
+++ b/2024/_posts/2024-04-11-2nd.md
@@ -1,8 +1,8 @@
 ---
 title: ".and() 그리고 .or()"
-# categories:
+categories: "RUST"
 #   - Blog
-tags: [rust]
+tags: [RUST]
 
 # toc: true
 # toc_sticky: true
