--- a/2024/_post/2024-04-10-2nd.md
+++ b/2024/_post/2024-04-10-2nd.md
@@ -1,5 +1,5 @@
 ---
-title: ".and() 그리고 .or()"
+title: "repr(C)"
 # categories:
 #   - Blog
 tags: [rust]
@@ -9,41 +9,9 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
-## .and() 그리고 .or()
+## repr(C)
 
-.and() is sort of like a bool for Option. You can match many Options to each other, and if they are all Some then it will give the last one. And if one of them is a None, then it will give None.
+ It has fairly simple intent: do what C does. The order, size, and alignment of fields is exactly what you would expect from C or C++. Any type you expect to pass through an FFI boundary should have repr(C), as C is the lingua-franca of the programming world. This is also necessary to soundly do more elaborate tricks with data layout such as reinterpreting values as a different type.
 
-.or()는 첫번째 Some을 리턴한다.
+The C representation is designed for dual purposes. One purpose is for creating types that are interoperable with the C Language. The second purpose is to create types that you can soundly perform operations on that rely on data layout such as reinterpreting values as a different type.
 
-
-```rust
-fn main() {
-    let first_try = vec![Some("1!"), None, Some("2!"), Some("3!"), None];
-    let second_try = vec![None, Some("4!"), Some("5!"), Some("6!"), Some("7!")];
-    let third_try = vec![Some("8!"), Some("9!"), Some("10!"), Some("11!"), None];
-
-    for i in 0..first_try.len() {
-        println!("{:?}", first_try[i].and(second_try[i]).and(third_try[i]));
-    }
-    println!("-----------");
-    for i in 0..first_try.len() {
-        println!("{:?}", first_try[i].or(second_try[i]).or(third_try[i]));
-    }
-}
-```
-
-결과
-```text
--- .and() ---------
-None
-None
-Some("10!")
-Some("11!")
-None
--- .or() ---------
-Some("1!")
-Some("4!")
-Some("2!")
-Some("3!")
-Some("7!")
-```
