--- a/2024/_posts/2024-07-27-1st.md
+++ b/2024/_posts/2024-07-27-1st.md
@@ -36,15 +36,98 @@ println!("Array occupies {} bytes", mem::size_of_val(&xs));
 
 # for loop
 ```rust
-let arr:[i32;4] = [10,20,30,40];
+let arr: [i32; 4] = [10, 20, 30, 40];
 
 for index in 0..4 {
-    println!("index is: {} & value is : {}",index,arr[index]);
+    println!("index: {}, value is: {}", index, arr[index]);
 }
 
-for val in arr.iter(){
-    println!("value is :{}",val);   
+// v는 array의 한 엘리먼트를 borrow(reference)
+// into_inter()를 사용하면 소유권을 v로 넘기게 된다
+for v in arr.iter() {
+    println!("value: {}", v);   
 }
+
+for (i, v) in arr.iter().enumerate() {
+    println!("index: {}, value: {}", i, v);
+}
+```
+
+# for loop(mut)
+```rust
+let mut arr: [i32; 4] = [10, 20, 30, 40];
+
+for h in arr.iter_mut() {
+    *h = *h + 1;
+}
+
+for i in 0..arr.len() {
+    arr[i] = arr[i] + 1;
+}
+```
+
+# call by value
+```rust
+let arr = [10, 20, 30];
+
+// 함수를 호출해도 arr는 don't change
+update(arr);
+
+// arr가 v에 copy되고 v는 수정(mut) 가능
+fn update(mut v: [i32; 3]) {
+    for i in 0..3 {
+        v[i] = 0;
+    }
+}
+```
+
+# call by reference
+```rust
+let mut arr = [10, 20, 30];
+
+// arr가 0으로 change
+update(&mut arr);
+
+fn update(v: &mut [i32]) {
+    for i in 0..3 {
+        v[i] = 0;
+    }
+}
+```
+
+# 2차원 array
+```rust
+const ROW: usize = 2;
+const COL: usize = 4;
+
+// c에서는 uint8_t grid[ROW][COL];
+let mut grid = [[0 as u8; COL]; ROW];
+
+let mut k = 0;
+for i in 0..2 {
+    for j in 0..4 {
+        grid[i][j] = k;
+        k = k + 1;
+    }
+}
+
+for (i, row) in grid.iter().enumerate() {
+    for (j, col) in row.iter().enumerate() {
+        println!("i:{}, j:{}, val:{}", i, j, col);
+    }
+    println!();
+}
+```
+```text
+i:0, j:0, val:0
+i:0, j:1, val:1
+i:0, j:2, val:2
+i:0, j:3, val:3
+
+i:1, j:0, val:4
+i:1, j:1, val:5
+i:1, j:2, val:6
+i:1, j:3, val:7
 ```
 
 # array 슬라이스
