--- a/2024/_posts/2024-07-27-1st.md
+++ b/2024/_posts/2024-07-27-1st.md
@@ -42,8 +42,8 @@ for index in 0..4 {
     println!("index: {}, value is: {}", index, arr[index]);
 }
 
-// v는 array의 한 엘리먼트를 borrow(reference)
-// into_inter()를 사용하면 소유권을 v로 넘기게 된다
+// iter()에서 v는 array의 한 엘리먼트를 borrow(reference)
+// into_inter()는 소유권을 v로 넘긴다
 for v in arr.iter() {
     println!("value: {}", v);   
 }
@@ -57,6 +57,7 @@ for (i, v) in arr.iter().enumerate() {
 ```rust
 let mut arr: [i32; 4] = [10, 20, 30, 40];
 
+// h가 참조형이므로 *을 붙여야 한다
 for h in arr.iter_mut() {
     *h = *h + 1;
 }
