--- a/2024/_posts/2024-08-02-1st.md
+++ b/2024/_posts/2024-08-02-1st.md
@@ -16,78 +16,79 @@ tags: [rust]
 
 
 
-## vector 만들기
+## slice 만들기
 ```rust
-    let v = vec![1u8, 2, 3, 4, 5];
-    let a = [1u8, 2, 3, 4, 5];
-    let b = &a;
-    let c = &v;
+fn main() {
+    let v: Vec<u8> = vec![1u8, 2, 3, 4, 5];
+    let a: [u8; 5] = [1u8, 2, 3, 4, 5];
 
-    let s = &v[1..4];
-    let s = &a[1..4];
+    // 아래 두 개는 슬라이스가 아니다
+    let v_ref: &Vec<u8> = &v;
+    let a_ref: &[u8; 5] = &a;
 
-    println!("size of {:?}", s.len());
+    // 타입이 다름에도 비교 성공
+    assert_eq!(v_ref, a_ref);
 
-    let s = String::from("hello world");
-    let s = "hello world";
-    let hello = &s[0..5];
-    let world = &s[6..11];
+    // 아래 두 개는 같은 슬라이스를 만들어낸다
+    let v_slice: &[u8] = &v[1..4];
+    let a_slice: &[u8] = &a[1..4];
 
-    println!("{:?}", hello);
-
+    assert_eq!(v_slice, a_slice);
+}
 ```
 
-## 같은 vector 만들기
+## mutable slice
 ```rust
-let v1: Vec<u8> = Vec::from([1, 2, 4]);
-let mut v2: Vec<u8> = Vec::new();
+fn main() {
+    // mutable 벡터
+    let mut v: Vec<u8> = vec![1u8, 2, 3, 4, 5];
 
-v2.extend(&v1);
+    // mutalbe 슬라이스 [2, 3, 4]
+    let v_slice = &mut v[1..4];
 
-assert_eq!(v1, v2);
+    // [2, 3, 4] -> [2, 3, 1]
+    v_slice[2] = 1;
+    assert_eq!(v_slice, [2, 3, 1]);
 
-let v3: Vec<u8> = v2.clone();
+    // 슬라이스를 변경하면 벡터도 변경
+    change_slice(v_slice);
+    assert_eq!(v, [1, 2, 3, 4, 5]);
 
-assert_eq!(v2, v3);
+    // mutable 벡터에 push
+    push_vec(&mut v);
+    assert_eq!(v, [1, 2, 3, 4, 5, 6]);
+}
+
+fn change_slice(v: &mut [u8]) {
+    v[2] = 4;
+}
+
+fn push_vec(v: &mut Vec<u8>) {
+    v.push(6);
+}
 ```
 
-## Array를 Vector로 변환
+## string slice
 ```rust
-let arr: [u16; 3] = [1, 2, 3];
+fn main() {
+    let mut s1 = String::from("bccho");
+    let s2 = "bccho";
 
-// 아래 두 개는 동일한 결과
-let v1: Vec<u16> = Vec::from(arr);
-let v2: Vec<u16> = arr.to_vec();
+    // String과 &str 내용 비교
+    assert_eq!(s1, s2);
 
-assert_eq!(v1, v2);
-```
+    // String과 &str 길이 비교
+    assert_eq!(s1.len(), s2.len());
 
-## String를 Vec<u8>로 변환
-```rust
-let s: String = "hello".to_string();
-let v1: Vec<u8> = Vec::from(s);
+    // 슬라이스 만들기
+    let s3 = &s2[1..];
+    let s4 = &s1[1..];
 
-let s: String = "hello".to_string();
-let v2: Vec<u8> = s.into_bytes();
+    // &String과 &str 내용 비교
+    assert_eq!(s3, s4);
 
-assert_eq!(v1, v2);
-
-// 에러 발생. into_bytes()는 string을 consume
-println!("{}", s);
-
-// 참고. string을 &[u8]로 변환
-let v2: &[u8] = s.as_bytes();
-```
-
-## push, pop
-```rust
-let mut v: Vec<u8> = vec![1u8, 2, 3];
-v.push(4);
-
-assert_eq!(v, vec![1, 2, 3, 4]);
-
-let p: Option<u8> = v.pop();
-
-assert_eq!(v, vec![1, 2, 3]);
-assert_eq!(4, p.unwrap());
+    let s3 = " hi";
+    s1 = s1 + s3;
+    assert_eq!(s1, "bccho hi");
+}
 ```
