--- a/2024/_posts/2024-08-05-1st.md
+++ b/2024/_posts/2024-08-05-1st.md
@@ -1,5 +1,5 @@
 ---
-title: "Lifetime"
+title: "Slice"
 # categories:
 #   - Blog
 tags: [rust]
@@ -9,35 +9,31 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
-* 참조에는 수명이 있다
-* 참조하는 값보다 오래 지속되어서는 안된다
-* 수명은 컴파일러가 유추한다
-* 직접 수명을 할당할 수 없다
-* 명시적 수명 주석은 모호성이 있는 곳에 제약을 만든다
+* 슬라이스는 배열과 달리 컴파일타임에 크기가 정해지지 않는다
+* 배열 타입: [T; length]
+* 슬라이스 타입: &[T]
+* 항상 다른 타입으로부터 borrow
 
-## 컴파일 에러
+
+
+## slice 만들기
 ```rust
-#[derive(Debug)]
-struct Point(i32, i32);
-
-// &Point를 반환하는데
-// 컴파일러는 p1과 p2 중에 어느 것을 반환할 지 알 수 없다
-// --> 반환 레퍼런스의 수명을 유추할 수 없다
-fn left_most(p1: &Point, p2: &Point) -> &Point {
-    if p1.0 < p2.0 {
-        p1
-    } else {
-        p2
-    }
-}
-
 fn main() {
-    let p1: Point = Point(10, 10);
-    let p2: Point = Point(20, 20);
+    let v: Vec<u8> = vec![1u8, 2, 3, 4, 5];
+    let a: [u8; 5] = [1u8, 2, 3, 4, 5];
 
-    // 컴파일러가 p3의 수명을 유추할 수 없다
-    let p3: &Point = left_most(&p1, &p2);
-    println!("p3: {p3:?}");
+    // 아래 두 개는 슬라이스가 아니다
+    let v_ref: &Vec<u8> = &v;
+    let a_ref: &[u8; 5] = &a;
+
+    // 타입이 다름에도 비교 성공
+    assert_eq!(v_ref, a_ref);
+
+    // 아래 두 개는 같은 슬라이스를 만들어낸다
+    let v_slice: &[u8] = &v[1..4];
+    let a_slice: &[u8] = &a[1..4];
+
+    assert_eq!(v_slice, a_slice);
 }
 ```
 
