--- a/2024/_posts/2024-08-02-1st.md
+++ b/2024/_posts/2024-08-02-1st.md
@@ -129,4 +129,64 @@ fn main() {
     let i = ImportantExcerpt {
         part: first_sentence,
     };
-}```
+}
+```
+
+## lifetime annotations 생략
+* input reference와 output reference가 있음에도 lifetime annotations가 없다
+* 아래 규칙(1)과 규칙(2)를 컴파일러가 자동으로 적용하기 때문이다
+
+```rust
+fn first_word(s: &str) -> &str {
+    let bytes = s.as_bytes();
+
+    for (i, &item) in bytes.iter().enumerate() {
+        if item == b' ' {
+            return &s[0..i];
+        }
+    }
+
+    s
+}
+
+fn main() {
+    println!("{}", first_word("my name is bccho"));
+}
+```
+
+* 아래 세 가지 경우에 컴파일러가 자동으로 lifetime annotations을 붙인다
+* (1) input reference 관련: 각 input reference에 lifetime parameter를 붙인다
+```rust
+fn foo<'a>(x: &'a i32);
+fn foo<'a, 'b>(x: &'a i32, y: &'b i32);
+```
+  * (2) output reference 관련: input reference가 하나인 경우, 동일한 것을 모든 output reference에 할당한다
+```rust
+fn foo<'a>(x: &'a i32) -> &'a i32
+```  
+  * (3) output reference 관련: input reference가 여러 개인 경우, 그리고 그 중에 한 개가 &self 혹은 &mut self인 경우는 모든 output reference에 self의 lifetime을 할당한다
+
+## method 정의에서 lifetime annotations
+* struct의 reference field에 사용한 lifetime annotations이 impl 키워드와 struct 이름 이후에 추가되어야 한다
+* 아래 method의 input reference 두 개의 lifetime은 각각 자동 부여되고, output reference의 lifetime은 input의 &self와 동일한 것이 자동 부여된다
+```rust
+struct ImportantExcerpt<'a> {
+    part: &'a str,
+}
+
+impl<'a> ImportantExcerpt<'a> {
+    fn announce_and_return_part(&self, announcement: &str) -> &str {
+        println!("Attention please: {announcement}");
+        self.part
+    }
+}
+```
+
+## 'static lifetime
+* 참조가 가르키는 것이 항상 유효함을 나타낸다
+* 참조하는 것이 프로그램 실행 시 항상 살아있는 경우이다
+* string literal은 항상 'static lifetime을 가진다
+* string이 프로그램 바이너리에 포함되므로 그 것을 가르키는 참조는 항상 유효하다
+```rust
+let s: &'static str = "I have a static lifetime.";
+```
