--- a/2024/_posts/2024-08-09-1st.md
+++ b/2024/_posts/2024-08-09-1st.md
@@ -10,6 +10,18 @@ tags: [rust]
 ---
 
 * 데이타는 heap에 저장되고, pointer는 stack에 저장된다
+* mut 사용 가능
+
+## 기본
+```rust
+fn main() {
+    let mut b = Box::new(5);
+    println!("b = {b}");
+
+    *b = 10;
+    println!("b = {b}");
+}
+```
 
 ## 컴파일 에러
 ```rust
