--- a/2024/_posts/2024-08-10-3rd.md
+++ b/2024/_posts/2024-08-10-3rd.md
@@ -14,8 +14,22 @@ tags: [rust]
 ## 예제
 
 ```rust
+
+// b                                         
+//  ┌─────┐ ┌─────┐                          
+//  │  3  │ │     ┼────────┐ a               
+//  └─────┘ └─────┘      ┌─▼───┐┌─────┐      
+//                       │     ││ Nil │      
+//  ┌─────┐ ┌─────┐      └─▲─┬─┘└─────┘      
+//  │  4  │ │     ┼────────┘ │               
+//  └─────┘ └─────┘          │               
+// c                     ┌───▼─┐             
+//                       │  5  │             
+//                       └─────┘             
+
 #[derive(Debug)]
 enum List {
+    // Rc 안에 RefCell
     Cons(Rc<RefCell<i32>>, Rc<List>),
     Nil,
 }
@@ -25,8 +39,10 @@ use std::cell::RefCell;
 use std::rc::Rc;
 
 fn main() {
+    // Rc<RefCell<i32>> 생성
     let value = Rc::new(RefCell::new(5));
 
+    // Rc<List> 생성
     let a = Rc::new(Cons(Rc::clone(&value), Rc::new(Nil)));
 
     let b = Cons(Rc::new(RefCell::new(3)), Rc::clone(&a));
