--- a/2024/_posts/2024-08-11-3rd.md
+++ b/2024/_posts/2024-08-11-3rd.md
@@ -17,9 +17,9 @@ use std::thread;
 
 fn main() {
 
-    // atomically reference counted 
-    // thread 간에 데이타를 공유하기 위해서는 Arc<T>를 사용해야 한다
-    // 또한 thread 내에서 데이타를 변경하려면 Mutex<T>를 사용해야 한다
+    // Arc: automatically reference counted 
+    // thread 간에 데이타를 공유하기 위해서 Arc<>를 사용해야 한다
+    // 또한 thread 내에서 데이타<T>를 변경하려면 Mutex<T>를 사용해야 한다
     // 이 방식은 단일 thread에서 Rc<RefCell<T>>를 사용하는 것과 같은 개념
     let counter = Arc::new(Mutex::new(0));
 
@@ -27,9 +27,19 @@ fn main() {
 
     for _ in 0..10 {
         
-        // 각 thread는 counter의 소유권을 가져야 한다
+        // 각 thread는 counter의 소유권을 가져야 한다 (공동 소유)
         let counter = Arc::clone(&counter);
 
+        // spawn()은 FnOnce 타입의 closure를 input으로 받는다
+        // FnOnce closure는 scope 내에서 한 번만 실행 가능하다
+        // 주변 변수의 소유권을 가져올 수 있기 때문이다
+        // 하지만 컴파일러는 closure 내의 변수 쓰임을 보고 각 변수의 capture 방식을 
+        // 다음 세가지 경우로 다르게 결정한다
+        //    (1) by reference: &T, (2) by mutable reference: &mut T, (3) by value: T
+        // 아래 counter 변수는 move가 없다면 &T로 capture 한다. lock()이 &self로 인자를 받기 때문
+        // 이 경우 main이 thread 보다 빨리 종료되어 counter 변수가 drop되는 상황이 발생한다 (컴파일 에러)
+        // 이 것을 방지하기 위해서 move를 사용한다
+        // move 키워드는 closure가 모든 변수를 강제로 by value 방식으로 capture 하도록 한다
         let handle = thread::spawn(move || {
             
             // num은 MutexGuard<i32>를 할당 받는다
