--- a/2024/_posts/2024-08-15-1st.md
+++ b/2024/_posts/2024-08-15-1st.md
@@ -1,5 +1,5 @@
 ---
-title: Thread mutex
+title: Fn, FnMut, FnOnce
 # categories:
 #   - Blog
 tags: [rust]
@@ -9,46 +9,202 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
-## 예제
+## 컴파일러가 자동으로 closure Trait bound를 추론
 
 ```rust
-use std::sync::{Arc, Mutex};
-use std::thread;
+fn main() {
+    //------------------------------
+    // Fn
+    // 1) reference로 변수를 capture. 수정 못함
+    // 2) 변수 capture을 안 할 수도 있음
+    // 3) 동시에 여러 번 수행 가능
+
+    let color = String::from("green");
+
+    // imple Fn() : color를 &String으로 캡쳐
+    let print = || println!("`color`: {}", color);
+
+    print();
+
+    // color를 추가로 borrow 가능
+    let _reborrow = &color;
+
+    print();
+
+    // borrow가 끝난 후 mvoe 가능하다
+    let _color_moved = color;
+
+    //------------------------------
+    // FnMut
+    // 1) mutable reference로 변수를 capture. 수정 가능
+    // 2) 여러 번 수행 가능
+
+    let mut count = 0;
+
+    // impl FnMut()
+    let mut inc = || {
+        count += 1;
+        println!("`count`: {}", count);
+    };
+
+    inc();
+
+    // 아래 코드를 살리면 컴파일 에러. 아래 inc()에서 count를 mutable reference 하기 때문
+    // let _reborrow = &count;
+
+    inc();
+
+    // mutable reference 사용 완료 했기 때문에 count를 &mut으로 reference 가능
+    let _count_reborrowed = &mut count;
+
+    //------------------------------
+    // FnOnce
+    // 1) 한 번만 수행 가능
+    // 2) 변수의 소유권을 가져온다.
+
+    // non-copy 타입
+    let movable = Box::new(3);
+
+    // impl FnOnce()
+    let consume = || {
+        println!("`movable`: {:?}", movable);
+        // movable을 소유하여야 drop이 가능하다
+        drop(movable);
+    };
+
+    // movable 변수를 consume
+    consume();
+
+    // 아래를 살리면 컴파일 에러
+    // consume();    
+}
+```
+
+## 컴파일 에러
+```rust
+#[derive(Debug)]
+struct Rectangle {
+    width: u32,
+    height: u32,
+}
+
+fn main() {
+    let mut list = [
+        Rectangle {
+            width: 10,
+            height: 1,
+        },
+        Rectangle {
+            width: 3,
+            height: 5,
+        },
+        Rectangle {
+            width: 7,
+            height: 12,
+        },
+    ];
+
+    let mut sort_operations = vec![];
+    let value = String::from("closure called");
+
+    // sort_by_key()는 input으로 FnMut closure를 받는다
+    list.sort_by_key(|r| {
+        // 여기서 컴파일 에러 발생
+        // value 변수가 sort_operations 벡터로 소유권이 이동한다
+        // 에러가 발생하지 않으려면 sort_by_key()가 FnOnce 이어야 함
+        // 그 경우 이 closure가 한 번만 수행되어야 한다
+        sort_operations.push(value);
+        r.width
+    });
+
+    println!("{list:#?}");
+}
+```
+
+## 컴파일 에러 --> 수정
+```rust
+
+    let mut num_sort_operations = 0;
+
+    list.sort_by_key(|r| {
+        // num_sort_operations를 mutable reference로 캡쳐
+        num_sort_operations += 1;
+        r.width
+    });
+
+    println!("{list:#?}, sorted in {num_sort_operations} operations");
+
+```
+
+## 함수 input으로 받을 때 closure의 trait bound
+```rust
+// ┌──────────────┐
+// │    FnOnce    │
+// │ ┌──────────┐ │
+// │ │  FnMut   │ │
+// │ │ ┌──────┐ │ │
+// │ │ │  Fn  │ │ │
+// │ │ └──────┘ │ │
+// │ └──────────┘ │
+// └──────────────┘
+
+// closure와 i32가 input 인 함수 정의
+fn apply_with_log<F>(f: F, add: i32) -> i32
+where
+    // closure의 trait bound는 FnOnce
+    // 하지만 FnMut 또는 Fn input으로 받을 수 있다
+    // 따라서 함수의 인자로 closure를 받을 때는 가능한 FnOnce로 정의한다
+    F: FnOnce(i32) -> i32,
+{
+    f(add)
+}
 
 fn main() {
 
-    // atomically reference counted 
-    // thread 간에 데이타를 공유하기 위해서는 Arc<T>를 사용해야 한다
-    // 또한 thread 내에서 데이타를 변경하려면 Mutex<T>를 사용해야 한다
-    // 이 방식은 단일 thread에서 Rc<RefCell<T>>를 사용하는 것과 같은 개념
-    let counter = Arc::new(Mutex::new(0));
+    // Fn closure. 변수를 capture하지 않음
+    let add_3 = |x| x + 3;
 
-    let mut handles = vec![];
+    // Fn closure가 FnOnce closure의 input으로 가능
+    println!("add_3: {}", apply_with_log(add_3, 10));
+    println!("add_3: {}", apply_with_log(add_3, 20));
 
-    for _ in 0..10 {
-        
-        // 각 thread는 counter의 소유권을 가져야 한다
-        let counter = Arc::clone(&counter);
+    let mut v = Vec::new();
 
-        let handle = thread::spawn(move || {
-            
-            // num은 MutexGuard<i32>를 할당 받는다
-            // MutexGuard는 smart pointer 이다
-            let mut num = counter.lock().unwrap();
+    // FnMut closure
+    let mut accumulate = |x: i32| {
+        // v 벡터를 수정하므로 mutable reference로 v를 capture
+        v.push(x);
+        v.iter().sum::<i32>()
+    };
 
-            // MutexGuard을 deferencing
-            // MutexGuard Deref를 implement한다
-            // MutexGuard가 scope를 벗어나면 자동으로 unlock()이 호출된다
-            *num += 1;
-        });
+    // FnMut closure가 FnOnce closure의 input으로 가능
+    println!("accumulate: {}", apply_with_log(&mut accumulate, 4));
+    println!("accumulate: {}", apply_with_log(&mut accumulate, 5));
 
-        handles.push(handle);
-    }
+    // FnOnce closure
+    let multiply_sum = |x| x * v.into_iter().sum::<i32>();
 
-    for handle in handles {
-        handle.join().unwrap();
-    }
-
-    println!("Result: {}", *counter.lock().unwrap());
+    // FnOnce closure는 multiply_sum를 consume 하므로 한 번만 수행 가능
+    println!("multiply_sum: {}", apply_with_log(multiply_sum, 3));
 }
+```
+
+## move 키워드
+```rust
+
+use std::thread;
+
+fn main() {
+    let list = vec![1, 2, 3];
+    println!("Before defining closure: {list:?}");
+
+    // list를 참조만 하므로 아래 closure는 Fn
+    // 그러나 main이 thread보다 빨리 종료되면 list가 drop 된다
+    // 그래서 move 키워드를 사용하여 list를 closure내로 강제 move 시킨다
+    // move 키워드는 closure가 캡쳐한 모든 변수의 소유권을 closure로 이동시킨다
+    thread::spawn(move || println!("From thread: {list:?}"))
+        .join()
+        .unwrap();
+}
+
 ```
