--- a/2024/_posts/2024-08-10-1st.md
+++ b/2024/_posts/2024-08-10-1st.md
@@ -10,7 +10,30 @@ tags: [rust]
 ---
 
 * 같은 데이타에 대해 여러 owner를 허용한다
+* clone()은 포인터를 추가한다. deep copy가 발생하지 않는다
+* clone()을 수행할 때 마다 reference count가 증가한다
+* scope를 벗어날 때 마다 reference count가 감소한다
 * single-threaded reference counting pointer
+
+//       ┌─────────────┐     
+//       │┌────┐┌─────┐│     
+//       ││ 10 ││ Nil ││     
+//       │└────┘└─────┘│     
+//       └────────▲────┘     
+//                │          
+//                │          
+//        ┌───────┼────┐     
+//        │ ┌───┐┌┴──┐ │     
+//      a │ │ 5 ││   │ │     
+//        │ └───┘└───┘ │◄┐   
+//        └─▲──────────┘ │   
+//          │            │   
+// ┌────────┼───┐┌───────┼──┐
+// │ ┌───┐┌─┴─┐ ││┌───┐┌─┼─┐│
+// │ │ 3 ││   │ │││ 4 ││   ││
+// │ └───┘└───┘ ││└───┘└───┘│
+// └────────────┘└──────────┘
+//       b            c      
 
 ## 컴파일 에러
 ```rust
@@ -26,6 +49,8 @@ fn main() {
 
     // a의 소유권이 b로 move
     let b = Cons(3, Box::new(a));
+
+    // 여기에서 컴파일 에러
     // a 소유권이 이동했으므로 사용불가
     let c = Cons(4, Box::new(a));
 }
