--- a/2024/_posts/2024-08-05-1st.md
+++ b/2024/_posts/2024-08-05-1st.md
@@ -9,31 +9,58 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
-* 슬라이스는 배열과 달리 컴파일타임에 크기가 정해지지 않는다
-* 배열 타입: [T; length]
-* 슬라이스 타입: &[T]
+* 슬라이스는 배열과 달리 컴파일 타임에 크기가 정해지지 않는다
+* 연속적인 sequence(배열,벡터)에 대한 동적인 view를 제공한다
+* 타겟에 대한 포인터와 크기를 저장한다
+* 슬라이스 타입: &[T] 또는 &mut [T]
+  * 벡터 타입: Vec[T]
+  * 배열 타입: [T; length]
 * 항상 다른 타입으로부터 borrow
 
 
-
-## slice 만들기
+## slice 만들기 / deref coercion
 ```rust
+fn coercion(a: &[u8], b: &[u8]) {
+    assert_eq!(a, [1u8, 2, 3, 4, 5]);
+    assert_eq!(b, [1u8, 2, 3, 4, 5]);
+
+    assert_eq!(a[0], 1);
+    assert_eq!(b[4], 5);
+
+    assert_eq!(a, b);
+}
+
 fn main() {
-    let v: Vec<u8> = vec![1u8, 2, 3, 4, 5];
-    let a: [u8; 5] = [1u8, 2, 3, 4, 5];
+    // vec: Vec<u8>
+    let vec = vec![1u8, 2, 3, 4, 5];
 
-    // 아래 두 개는 슬라이스가 아니다
-    let v_ref: &Vec<u8> = &v;
-    let a_ref: &[u8; 5] = &a;
+    // arr: [u8; 5]
+    let arr = [1u8, 2, 3, 4, 5];
 
-    // 타입이 다름에도 비교 성공
-    assert_eq!(v_ref, a_ref);
+    // &vec: &Vec<u8>, &arr: &[u8; 5]
+    //
+    // implicit deref coercion:
+    //   &Vec<u8>-> &[u8]
+    //   &[u8; 5]-> &[u8]
+    coercion(&vec, &arr);
 
-    // 아래 두 개는 같은 슬라이스를 만들어낸다
-    let v_slice: &[u8] = &v[1..4];
-    let a_slice: &[u8] = &a[1..4];
+    // v_slice: &[u8]
+    let v_slice = &vec[1..4];
+
+    // a_slice: &[u8]
+    let a_slice = &arr[1..4];
 
     assert_eq!(v_slice, a_slice);
+    assert_eq!(v_slice.len(), 3);
+    assert_eq!(a_slice.len(), 3);
+
+    // v_slice: &[u8]
+    let v_slice = &vec[..];
+
+    // v_slice: &[u8]
+    let v_slice2 = vec.as_slice();
+
+    assert_eq!(v_slice, v_slice2);
 }
 ```
 
@@ -41,9 +68,11 @@ fn main() {
 ```rust
 fn main() {
     // mutable 벡터
-    let mut v: Vec<u8> = vec![1u8, 2, 3, 4, 5];
+    // v: Vec<u8>
+    let mut v = vec![1u8, 2, 3, 4, 5];
 
     // mutalbe 슬라이스 [2, 3, 4]
+    // v_slice: &mut [u8]
     let v_slice = &mut v[1..4];
 
     // [2, 3, 4] -> [2, 3, 1]
@@ -54,41 +83,131 @@ fn main() {
     change_slice(v_slice);
     assert_eq!(v, [1, 2, 3, 4, 5]);
 
+    // implicit deref coercion
+    change_slice(&v);
+
     // mutable 벡터에 push
     push_vec(&mut v);
-    assert_eq!(v, [1, 2, 3, 4, 5, 6]);
+    assert_eq!(v, [1, 2, 4, 4, 5, 6]);
 }
 
 fn change_slice(v: &mut [u8]) {
     v[2] = 4;
 }
 
+// 벡터 크기를 변경하는 작업 외에는 slice를 input으로 받는 것이 유연하다
 fn push_vec(v: &mut Vec<u8>) {
     v.push(6);
 }
 ```
 
-## string slice
+## string slice 
+
+* 문제
+
 ```rust
+// 문자열에서 첫 번째 단어의 위치를 return
+fn first_word(s: &String) -> usize {
+    // bytes: &[u8]
+    let bytes = s.as_bytes();
+
+    // i: usize
+    // &item: u8
+    for (i, &item) in bytes.iter().enumerate() {
+        if item == b' ' {
+            return i;
+        }
+    }
+
+    s.len()
+}
+
+// 문제: 문자열과 첫 번째 단어 위치가 sync가 안 맞을 수 있다
 fn main() {
-    let mut s1 = String::from("bccho");
-    let s2 = "bccho";
+    // s: String
+    let mut s = String::from("hello world");
 
-    // String과 &str 내용 비교
-    assert_eq!(s1, s2);
+    // word: usize
+    let word = first_word(&s);
 
-    // String과 &str 길이 비교
-    assert_eq!(s1.len(), s2.len());
+    // 스트링을 ""로 만든다
+    s.clear();
 
-    // 슬라이스 만들기
-    let s3 = &s2[1..];
-    let s4 = &s1[1..];
+    // 이 시점에서 word는 5 이지만 string은 ""
+    // word와 string이 sync가 안 맞는다
+}
+```
 
-    // &String과 &str 내용 비교
-    assert_eq!(s3, s4);
+* 해결 --> 컴파일 에러가 나게 만든다
 
-    let s3 = " hi";
-    s1 = s1 + s3;
-    assert_eq!(s1, "bccho hi");
+```rust
+
+// String을 입력 받아서 첫 번째 단어를 slice로 리턴
+fn first_word(s: &String) -> &str {
+    let bytes = s.as_bytes();
+
+    for (i, &item) in bytes.iter().enumerate() {
+        if item == b' ' {
+            return &s[0..i];
+        }
+    }
+
+    &s[..]
+}
+
+fn main() {
+    let mut s = String::from("hello world");
+
+    // word: &str
+    // s에 대한 immutable borrow 발생
+    let word = first_word(&s);
+
+    // s에 대한 mutable borrow 발생
+    // clear()가 &mut self을 input으로 받기 때문
+    // 이 시점에서 s에 대한 mutable과 immutable reference가 동시에 존재 --> error
+    s.clear();
+
+    // word를 접근하면 에러
+    println!("the first word is: {word}");
+}
+```
+
+* 개선
+
+```rust
+
+// input을 스트링 슬라이스로 변경
+fn first_word(s: &str) -> &str {
+    let bytes = s.as_bytes();
+
+    for (i, &item) in bytes.iter().enumerate() {
+        if item == b' ' {
+            return &s[0..i];
+        }
+    }
+
+    &s[..]
+}
+
+fn main() {
+    let my_string = String::from("hello world");
+
+    // &String -> &str
+    let word = first_word(&my_string[0..6]);
+    let word = first_word(&my_string[..]);
+
+    // &String -> &str : deref coercion
+    let word = first_word(&my_string);
+
+    // string literal
+    // my_string_literal: &str
+    let my_string_literal = "hello world";
+
+    // input: &str
+    let word = first_word(&my_string_literal[0..6]);
+    let word = first_word(&my_string_literal[..]);
+
+    // input: &str
+    let word = first_word(my_string_literal);
 }
 ```
