--- a/2024/_posts/2024-08-11-2nd.md
+++ b/2024/_posts/2024-08-11-2nd.md
@@ -13,7 +13,7 @@ tags: [rust]
 
 ```rust
 
-// acronym for multiple producer, single consumer
+// mpsc: acronym for multiple producer, single consumer
 use std::sync::mpsc;
 use std::thread;
 use std::time::Duration;
@@ -21,6 +21,7 @@ use std::time::Duration;
 fn main() {
     let (tx, rx) = mpsc::channel();
 
+    // sender #1
     let tx1 = tx.clone();
     thread::spawn(move || {
         let vals = vec![
@@ -31,11 +32,14 @@ fn main() {
         ];
 
         for val in vals {
+            // 보내는 순서대로 수신자가 받음
+            // 여기서 block 되지 않는다
             tx1.send(val).unwrap();
             thread::sleep(Duration::from_secs(1));
         }
     });
 
+    // sender #2
     thread::spawn(move || {
         let vals = vec![
             String::from("more"),
@@ -50,6 +54,7 @@ fn main() {
         }
     });
 
+    // 수신할 메세지가 없으면 block
     // 채널이 닫히면 루프가 끝난다
     for received in rx {
         println!("Got: {received}");
