--- a/2024/_posts/2024-08-09-box.md
+++ b/2024/_posts/2024-08-09-box.md
@@ -9,6 +9,8 @@ tags: [rust]
 # toc_label: "페이지 목차"
 ---
 
+* 스택에 저장하는 데이타는 알려진 고정된 크기를 가져야 한다
+* 컴파일 타임에 크기를 알 수 없거나 크기가 변경되는 데이타는 스택에 저장될 수 없고 힙에 저장되어야 한다
 * 데이타는 heap에 저장되고, pointer는 stack에 저장된다
 * mut 사용 가능
 
