--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -1,5 +1,5 @@
 ---
-title: 매크로
+title: 매크로 -1
 # categories:
 #   - Blog
 tags: [rust]
@@ -52,198 +52,5 @@ create_function!(foo);
 
 fn main() {
     foo();
-}
-```
-
-* argument 두 개, match 규칙 두 개
-```rust
-macro_rules! operate {
-    (add $a:expr, $b:expr) => {
-        $a + $b
-    };
-
-    (mul $a:expr, $b:expr) => {
-        $a * $b
-    };
-}
-
-fn main() {
-    let res1 = operate!(add 34, 20);
-    let x = 22;
-    let res2 = operate!(mul x, 10);
-}
-```
-
-## Repetition
-
-```rust
-macro_rules! repeat_print {
-    // "$($x:expr),*" 는 분리자가 ","인 "$x:expr" 이 0번 이상 반복됨을 의미한다
-    // "," 는 separator
-    //
-    // ($($e:expr),*) : no_trailing
-    // ($($e:expr,)*) : with_trailing
-    // ($($e:expr),* $(,)*) : either
-    //
-    ($($x:expr),*) => {
-        // 반복 루틴이 $()* 안에 들어간다
-        $(
-            println!("{}", $x);
-        )*
-    };
-}
-
-fn main() {
-    repeat_print!(1, 2, 3);
-}
-```
-
-* 결과
-
-```text
-1
-2
-3
-```
-
-## vec2 매크로
-
-```rust
-macro_rules! vec2 {
-    // vec2![]
-    () => {
-        Vec::new()
-    };
-
-    // vec2![1, 2, 3, 4] 또는 vec2![1, 2, 3, 4,]
-    // 분리자가 ","인 "$a:expr"이 한 번 이상 나오고 마지막 "," 는 option
-    ($($a:expr),+ $(,)?) => {{
-        let mut my_vec = Vec::new();
-        $(
-            my_vec.push($a);
-        )+
-        my_vec
-    }};
-
-    // vec2![23; 5]
-    ($m:expr; $n:expr) => {{
-        let ele = $m;
-        let mut my_vec = Vec::new();
-        for _ in 0..$n {
-            my_vec.push(ele.clone())
-        }
-        my_vec
-    }};
-}
-
-fn main() {
-    let nums1: Vec<i32> = vec2![];
-    let nums2 = vec2![1, 2, 3, 4];
-    let nums3 = vec2![23; 5];
-    println!("{nums1:?} {nums2:?} {nums3:?}");
-}
-```
-
-* 결과
-
-```text
-[] [1, 2, 3, 4] [23, 23, 23, 23, 23]
-```
-
-## recursive
-
-```rust
-macro_rules! add {
-    ($a:expr) => {
-        $a
-    };
-
-    ($a:expr, $b:expr) => {
-        $a + $b
-    };
-
-    // "tt"는 token tree
-    // "$($b:tt)*"은 나머지 argument를 의미
-    ($a:expr, $($b:tt)*) => {
-        $a + add!($($b)*)
-    };
-}
-```
-
-## 두 개 그룹
-
-```rust
-macro_rules! pos {
-    ($($a:expr),*; $($b:expr),*) => {{
-        let (mut sum1, mut sum2) = (0, 0);
-        $(
-            sum1 += $a;
-        )*
-        $(
-            sum2 += $b;
-        )*
-        sum1 * sum2
-    }};
-}
-
-fn main() {
-    let res = pos!(1,2,3; 4,5,6);
-    println!("{res}");
-}
-```
-
-## 테이블 헤더 포맷팅
-
-```rust
-macro_rules! print_table_header {
-    ($txt:expr) => {
-        println!("");
-        println!("{0}", $txt);
-        println!("{0}", std::iter::repeat("-").take($txt.len()).collect::<String>());
-    };
-    
-    ($fmt:expr, $($arg:tt)*) => ({
-        let table_row = format!($fmt, $($arg)*).to_string();
-
-        println!("");
-        println!("{0}", table_row);
-        println!("{0}", std::iter::repeat("-").take(table_row.len()).collect::<String>());
-    });
-}
-
-fn main() {
-    print_table_header!("{0:<6} | {1:<40}", "Delta", "Ex[kc]");
-    print_table_header!("bccho");
-}
-```
-
-```text
-Delta  | Ex[kc]                                  
--------------------------------------------------
-
-bccho
------
-```
-
-## 다른 모듈에 매크로 정의
-
-* ma.rs
-
-```rust
-#[macro_export]
-macro_rules! print_message {
-    ($msg:expr) => {
-        println!("{}", $msg)
-    };
-}
-```
-
-* main.rs
-
-```rust
-mod ma;
-
-fn main() {
-    print_message!("bccho");
 }
 ```
