--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -54,3 +54,54 @@ fn main() {
     foo();
 }
 ```
+
+* argument 두 개, match 규칙 두 개
+```rust
+macro_rules! operate {
+    (add $a:expr, $b:expr) => {
+        $a + $b
+    };
+
+    (mul $a:expr, $b:expr) => {
+        $a * $b
+    };
+}
+
+fn main() {
+    let res1 = operate!(add 34, 20);
+    let x = 22;
+    let res2 = operate!(mul x, 10);
+}
+```
+
+## Repetition
+
+```rust
+macro_rules! repeat_print {
+    // "$($x:expr),*" 는 분리자가 ","인 "$x:expr" 이 0번 이상 반복됨을 의미한다
+    // "," 는 separator
+    //
+    // ($($e:expr),*) : no_trailing
+    // ($($e:expr,)*) : with_trailing
+    // ($($e:expr),* $(,)*) : either
+    //
+    ($($x:expr),*) => {
+        // 반복 루틴이 $()* 안에 들어간다
+        $(
+            println!("{}", $x);
+        )*
+    };
+}
+
+fn main() {
+    repeat_print!(1, 2, 3);
+}
+```
+
+* 결과
+
+```text
+1
+2
+3
+```
