--- a/2024/_posts/2024-08-30-1st.md
+++ b/2024/_posts/2024-08-30-1st.md
@@ -115,5 +115,15 @@ macro_rules! vec2 {
     () => {
         Vec::new()
     };
+
+    // vec2![1, 2, 3, 4] 또는 vec2![1, 2, 3, 4,]
+    // 분리자가 ","인 "$a:expr"이 한 번 이상 나오고 마지막 "," 는 option
+    ($($a:expr),+ $(,)?) => {{
+        let mut my_vec = Vec::new();
+        $(
+            my_vec.push($a);
+        )+
+        my_vec
+    }};
 }
 ```
